# Lernix

./: .gitignore  LICENCE  README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  requirement-ai.txt  requirements.txt
backend/app/: .env  database.py  main.py  migrate_add_password_column.py  model.py
backend/app/ai/ai_endpoint/: ask_question.py  create_mcq.py  summarize.py
backend/app/ai/notebook/: ask_question.ipynb  create_mcq.ipynb  summarizer.ipynb
backend/app/ai/services/: ask_question_logic.py  create_mcq_logic.py  document_processing.py  summarizer.py  summarizer_logic.py
backend/app/insights/routes/: activity_insights.py  mcq_insights.py  summary_insight.py  total_time_insights.py
backend/app/insights/services/: activity_time_tracker.py  course_time_totals_sync.py  summary_time.py  total_time_spent.py
backend/app/ml/ml_model/: label_encoder.pkl  model.pkl
backend/app/models/: __init__.py  chapter_files.py  chapters.py  course_time_totals.py  courses.py  learning_sessions.py  mcq_attempt.py  users.py
backend/app/routes/: auth.py  chapter_file.py  chapters.py  courses.py  users.py
backend/app/test/: test_connection.py
backend/app/utils/: s3_helper.py
frontend/: Dockerfile  README.md  index.html  package-lock.json
frontend/src/: App.jsx
frontend/src/components/: About.jsx  Courses.jsx  Dashboard.jsx  Home.jsx  Login.jsx  NavBar.jsx  ProtectedRoute.jsx  Register.jsx  chapters.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/services/: api.js
frontend/vite-project/src/: App.jsx
(+19 files in other folders)
